# Markdown2Word

./: .editorconfig  .gitignore  CHANGELOG.md  Dockerfile  README.md  README.zh-CN.md  build.bat  main.py  main.spec  md2word.py  pyproject.toml  requirement.txt  requirements.txt
.github/workflows/: ci.yml
config/: settings.py
converter/: batch_converter.py  pandoc_helper.py
docs/: index.md
scripts/: docker_smoke_test.py
tests/: test_converter.py  test_smoke.py
ui/: main_window.py  style.qss  widgets.py
utils/: logger.py
